--- a/css/style.css
+++ b/css/style.css
@@ -348,8 +348,49 @@ background-color:var(--warm_black);
 
 }
 
+.conocelo{
+  width: 320px;
+  height: auto;
+}
+.conocelo__image{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 60px;
+  width: 320px;
+  height: 387px;
+  background-image:url("../asset/img/bitcoinbaby\ 1.png");
+  color: var(--just_while);
+  
+}
+.conocelo__title{
+  float: var(--h1-mobile);
+}
 
+.plan__container{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin-top: 75px;
+margin-bottom: 75px;
 
+}
+
+.plan__title{
+  font: var(--h1-mobile);
+  color: var(--warm_black);
+  text-align: center;
+  margin-bottom: 32px;
+}
+.plan__parrafo{
+  font:var(--h2-Mobile) ;
+  color: var(--gray);
+  text-align: center;
+}
+.plan__container__text{
+  margin-bottom: 50px;
+}
 /* Posicionamiento
 Modelo de caja
 Tipografía y texto
