--- a/css/style.css
+++ b/css/style.css
@@ -167,19 +167,16 @@ main {
 
 .exchange__seccion--table {
   display: flex;
-  flex-direction: row;
-  width: 200%;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
   gap: 50px;
-  transition: transform 0.5s ease-in-out;
-}
-.carrucel--0 {
-  transform: translateX(-50%);
 }
 
-.carrucel--100 {
-  transform: translateX(0%);
-}
 
+
+*/
 .exchange__table {
   position: relative;
   display: flex;
@@ -187,9 +184,12 @@ main {
   align-items: center;
   justify-content: center;
   max-width: 12.3125rem;
-
   margin: 0 auto;
 }
+
+
+
+
 .exchange__table__title {
   align-self: start;
   font: var(--h3-Mobile);
@@ -271,11 +271,13 @@ table .table__top_let {
   position: relative;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   width: 100%;
   height: auto;
   background-color: var(--warm_black);
   padding-bottom: 24px;
+  
 }
 .producto__icono__patata {
   position: absolute;
@@ -307,21 +309,29 @@ table .table__top_let {
 }
 .producto__container__valor {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
   gap: 16px;
-  width: 288px;
+  width:100%;
+  justify-content: center;
+  max-width: 750px;
+  margin-top: 20px;
   background-color: var(--warm_black);
+  padding-left: 15px;
+  padding-right: 15px;
+  
 }
 .producto__article {
   display: flex;
   flex-direction: column;
+  width:100%;
+  max-width:345px ;
+  height:134px ;
   background-color: var(--Warm_Black_1);
-  margin-top: 24px;
+ 
   padding: 16px;
   gap: 8px;
   border-radius: 5px;
+
 }
 
 .producto__article h3 {
@@ -349,9 +359,11 @@ table .table__top_let {
   align-items: center;
   justify-content: flex-start;
   padding-top: 60px;
-  width: 320px;
+  width: 100%;
   height: 387px;
   background-image: url("../asset/img/bitcoinbaby\ 1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
   color: var(--just_while);
 }
 .conocelo__title {
@@ -387,67 +399,56 @@ Modelo de caja
 Tipografía y texto
 Visual
 Miscelánea */
-.container_card {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-  width: 100%;
-}
-.card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #fff;
-  width: 11.875rem;
 
-  padding: 30px 10px 20px 10px;
-  gap: 10px;
-  border-radius: 8px;
-  box-shadow: 0px 4px 8px 0px #59491e29;
+/*seccion card promociones*/
+.main-planes-container{
+width: 100%;
+min-width: 320px;
+padding-bottom: 70px;
+text-align: center;
 }
-.card-burbuja {
-  position: absolute;
-  top: -15px;
-  width: 101px;
-  height: 31px;
-  padding: 8px;
-  font: var(--inter-small);
-  color: var(--just_while);
-  background-color: var(--bitcoin_orage);
-  border-radius: 8px;
-}
-.card__precio {
-  font: var(--inter-large);
-  font-weight: bold;
-}
-.card__precio span {
-  position: relative;
-  top: -30px;
-  font: var(--inter-small);
-  font-weight: bold;
-}
-.card__promocion {
-  font: var(--inter-small);
-  color: var(--gray);
-  text-align: center;
-}
-.card__button {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 
-  width: 151px;
-  height: 48px;
-  padding: 12px 14px 12px 14px;
-  font-family: inherit;
-  font-size: var(--size14);
-  line-height: 18.23px;
-  font-weight: 700;
-  border: 2px solid var(--bitcoin_orage);
-  border-radius: 4px;
+.plans--title{
+  width: 90%;
+  min-width: 288px;
+  height: auto;
+  margin: 0 auto;
+  margin-bottom: 50px;
+ 
 }
+.plans--title h2{
+padding-top: 50px;
+font-size: 2.4rem;
+font-weight: bold;
+line-height: 2.6rem;
+color: var(--warm_black);
+
+}
+.plans--title p{
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: #757575;
+}
+
+
+.plans-container--card{
+  position: relative;
+  width: 70%;
+  min-width: 230px;
+  max-width: 300px;
+  height: 250px;
+  margin: 50px auto 0;
+  padding: 0 15px;
+  background-color: var(--just_while);
+  border-radius: 15px ;
+  box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+
+}
+
+
+/*pregutas*/
 .preguntas {
   display: flex;
   flex-direction: column;
@@ -520,9 +521,9 @@ footer ol{
 }
 
 
-
+/*
 @media (min-width: 768px) {
-  /* Estilos para pantallas más grandes */
+  
   header{
     height:28.125rem;
   }
@@ -550,5 +551,92 @@ footer ol{
     width: 23.875rem;
     text-align: center;
   }
-  
+  .exchange__container__text{
+    max-width: 29.125rem;
+  }
+
+  .exchange__container__text h2{
+    font-size: 2.5rem;
+   line-height: 2.625rem;
+
+  }
+  .exchange__container__text p{
+    font-size: var(--size20);
+    line-height: 24px;
+  }
+  .exchange__seccion--table{
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .exchange__table{
+    margin: 15px;
+  }
+  .arrow__right,.arrow__left{
+    display: none;
+  }
+  .producto__article{
+    max-width: 21.5625rem;
+  }
+  .producto__container__valor{
+    width: 900px;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .conocelo__image{
+    justify-content: center;
+    background-image: url(/asset/img/bitcoinbaby\ 2.png);
+    width: 100%;
+    height: 299px;
+    background-size:cover ;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .conocelo__image h2{
+    font-size: 40px;
+    line-height: 42px;
+    font-weight: 700;
+    padding-top: 0px;
+  }
+  .plan__title{
+    font-size: 40px;
+    line-height: 42px;
+    max-width: 466px;
+    
+  }
+  .plan__parrafo{
+    font-size: var(--size20);
+  }
+  .preguntas__titulo{
+    
+    font-size:40px ;
+    font-weight: 700;
+    line-height: 42px;
+  }
+
+  .preguntas__container{
+    width: 466px;
+    font-family: 20px;
+    font-weight: 500px;
+    line-height: 24px;
+  }
+
+  footer ol {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: s;
+    height:24px ;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    margin: 0 auto ;
+
+  }
+  footer figure{
+    width: 166px;
+    height: 111.2px;
+  }
+
 }
+*/
